<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pimouse_control2</name>
  <version>0.0.0</version>
  <description>The pimouse_control2 package</description>
  <maintainer email="oosmyss@gmail.com">blupat</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pimouse_msgs</exec_depend>
  <exec_depend>pimouse_ros2</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
